// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders <Profiles /> with the populated data 1`] = `
<div
  class="profiles__Container-bxtkkv-0 glIXWo"
>
  <h1
    class="profiles__Title-bxtkkv-1 kxHuEI"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 kUSmfb"
  >
    <li
      class="profiles__Item-bxtkkv-5 fFKdrN"
    >
      <img
        class="profiles__Picture-bxtkkv-4 izXQyg"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 ldskSv"
      >
        darac
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders <Profiles /> with the populated data but 1`] = `
<div
  class="profiles__Container-bxtkkv-0 glIXWo"
>
  <h1
    class="profiles__Title-bxtkkv-1 kxHuEI"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 kUSmfb"
  >
    <li
      class="profiles__Item-bxtkkv-5 fFKdrN"
    >
      <img
        class="profiles__Picture-bxtkkv-4 izXQyg"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 ldskSv"
      >
        darac
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders <Profiles /> with the populated data but misc profile image 1`] = `
<div
  class="profiles__Container-bxtkkv-0 glIXWo"
>
  <h1
    class="profiles__Title-bxtkkv-1 kxHuEI"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 kUSmfb"
  >
    <li
      class="profiles__Item-bxtkkv-5 fFKdrN"
    >
      <img
        class="profiles__Picture-bxtkkv-4 izXQyg"
        data-testid="profile-picture-misc"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 ldskSv"
      >
        darac
      </p>
    </li>
  </ul>
</div>
`;
